--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -48,7 +48,7 @@
 		}
 		.login_btn:focus {
 			box-shadow: none !important;
-			outline: 0px !important;
+			outline: 0 !important;
 		}
 		.login_container {
 			padding: 0 2rem;
@@ -62,7 +62,7 @@
 		.input_user,
 		.input_pass:focus {
 			box-shadow: none !important;
-			outline: 0px !important;
+			outline: 0 !important;
 		}
 
     </style>
@@ -110,6 +110,7 @@
                     </div>
                 </form>
             </div>
+            {{ form.errors }}
             <div class="mt-4">
                 <div class="d-flex justify-content-center links">
                     Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
