--- a/accounts/templates/accounts/navbar.html
+++ b/accounts/templates/accounts/navbar.html
@@ -22,7 +22,11 @@
         <a class="nav-link" href="{%  url 'products' %}">Products</a>
       </li>
         {% endif %}
-
+    {%  if not request.user.is_staff %}
+        <li class="nav-item">
+        <a class="nav-link" href="{%  url 'settings' %}">Settings</a>
+      </li>
+    {% endif %}
 
     </ul>
   </div>
