--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -114,6 +114,9 @@
                 <div class="d-flex justify-content-center links">
                     Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
                 </div>
+                <div class="d-flex justify-content-center links">
+                    Can't Lofgin? <a href="{% url 'reset_password' %}" class="ml-2">Forgot Password</a>
+                </div>
 
             </div>
         </div>
