--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -115,7 +115,7 @@
                     Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
                 </div>
                 <div class="d-flex justify-content-center links">
-                    Can't Lofgin? <a href="{% url 'reset_password' %}" class="ml-2">Forgot Password</a>
+                    Can't Login? <a href="{% url 'reset_password' %}" class="ml-2">Forgot Password</a>
                 </div>
 
             </div>
